--- a/index.html
+++ b/index.html
@@ -4,51 +4,100 @@
   <meta charset="utf-8">
   <title>Gráfico rendimiento</title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://www.gstatic.com/charts/loader.js"></script>
 
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      text-align: center; /* Centra título y subtítulo */
+    :root {
+      --bg-page: #f5f7fb;
+      --bg-card: #ffffff;
+      --text-main: #111827;
+      --text-muted: #6b7280;
+      --accent: #2563eb;      /* puntos */
+      --trend: #ef4444;       /* línea tendencia */
+      --grid: #e5e7eb;
     }
 
-    #chart {
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: var(--bg-page);
+      color: var(--text-main);
+      display: flex;
+      justify-content: center;
+    }
+
+    .wrapper {
       width: 100%;
-      height: 90vh;
-      margin-top: 10px;
+      max-width: 1000px;
+      padding: 16px;
+      box-sizing: border-box;
+    }
+
+    .card {
+      background: var(--bg-card);
+      border-radius: 16px;
+      box-shadow: 0 10px 25px rgba(15, 23, 42, 0.08);
+      padding: 16px 16px 8px 16px;
     }
 
     h1, h2 {
       margin: 0;
-      padding: 5px 0;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 1.6rem;
+      font-weight: 700;
+    }
+
+    h2 {
+      font-size: 1rem;
+      font-weight: 500;
+      color: var(--text-muted);
+      margin-top: 4px;
+      margin-bottom: 8px;
+    }
+
+    #chart {
+      width: 100%;
+      height: 70vh;
+      min-height: 320px;
+    }
+
+    @media (max-width: 600px) {
+      h1 { font-size: 1.3rem; }
+      h2 { font-size: 0.9rem; }
+      #chart { height: 65vh; }
     }
   </style>
 </head>
 
 <body>
-
-  <h1 id="titulo">Evolución del rendimiento</h1>
-  <h2 id="subtitulo"></h2>
-
-  <div id="chart"></div>
+  <div class="wrapper">
+    <div class="card">
+      <h1 id="titulo">Evolución del rendimiento</h1>
+      <h2 id="subtitulo"></h2>
+      <div id="chart"></div>
+    </div>
+  </div>
 
   <script>
     google.charts.load('current', { packages: ['corechart'] });
     google.charts.setOnLoadCallback(init);
 
     async function init() {
-
       const url = "https://script.google.com/macros/s/AKfycbxMfiseKw7Fh810OIbEPnGrNZa-ZviQ7XYUifrdrk7lxfHdjODFPRzw0QmLehMKnicI/exec";
 
       const r = await fetch(url);
       const json = await r.json();
 
-      const header = json.header;
-      const data   = json.data;
+      const header = json.header;   // ["Fecha","Valor"]
+      const data   = json.data;     // [["2025/05/07",320], ...]
+      const subtitulo = json.subtitulo || "";
+      const ejeY = json.ejeY || header[1];
 
-      // --- NUEVO: subtítulo desde C22 ---
-      document.getElementById("subtitulo").innerText = json.subtitulo || "";
+      document.getElementById("subtitulo").innerText = subtitulo;
 
       if (!data || data.length === 0) {
         document.getElementById('chart').innerText = "Sin datos.";
@@ -72,31 +121,51 @@
       const margin = (max - min) * 0.1 || 1;
 
       const options = {
-        title: "",     // Título lo ponemos fuera con <h1>
+        title: "",
+        backgroundColor: 'transparent',
         legend: { position: "none" },
+        chartArea: {
+          left: 70,
+          right: 20,
+          top: 30,
+          bottom: 60
+        },
         hAxis: {
           title: header[0],
-          format: 'yyyy/MM/dd'
+          format: 'yyyy/MM/dd',
+          textStyle: { fontSize: 11, color: '#4b5563' },
+          titleTextStyle: { fontSize: 12, italic: false, color: '#374151' },
+          gridlines: { color: '#e5e7eb' },
+          slantedText: true,
+          slantedTextAngle: 35
         },
-
-        // --- NUEVO: nombre eje Y = C23 ---
         vAxis: {
-          title: json.ejeY || header[1],
-          viewWindow: { min: min - margin, max: max + margin }
+          title: ejeY,
+          viewWindow: { min: min - margin, max: max + margin },
+          textStyle: { fontSize: 11, color: '#4b5563' },
+          titleTextStyle: { fontSize: 12, italic: false, color: '#374151' },
+          gridlines: { color: '#e5e7eb' },
+          baselineColor: '#d1d5db'
         },
-
+        pointSize: 6,
+        colors: ['#2563eb'],
         trendlines: {
-          0: { type: 'linear', visibleInLegend: true }
+          0: {
+            type: 'linear',
+            visibleInLegend: false,
+            color: '#ef4444',
+            lineWidth: 2,
+            opacity: 0.8
+          }
         }
       };
 
-      new google.visualization.ScatterChart(
+      const chart = new google.visualization.ScatterChart(
         document.getElementById("chart")
-      ).draw(dt, options);
+      );
+      chart.draw(dt, options);
     }
   </script>
-
 </body>
 </html>
-
 
